--- a/RecycleApp/app/src/main/res/layout/activity_main.xml
+++ b/RecycleApp/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="16dp" />
 
         <Button
-            android:id="@+id/registerButton"
+            android:id="@+id/openRegisterButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Зарегистрироваться" />
